--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <span class="mdc-xlarge mdc-bottombar mdc-border-dark-grey mdc-padding-16">Contact Us</span>
   </div>
 
-  <form class="mdc-container" action="https://formsubmit.co/midwestdentalconsulting@email.com" method="POST">
+  <form class="mdc-container" action="https://formsubmit.co/midwestdentalconsulting@gmail.com" method="POST">
     <div class="mdc-section">
       <label>Name</label>
       <input class="mdc-input mdc-border mdc-hover-border-black" style="width:100%;" type="text" name="Name" required>
