--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <span class="mdc-xlarge mdc-bottombar mdc-border-dark-grey mdc-padding-16">Contact Us</span>
   </div>
 
-  <form class="mdc-container" action="https://formsubmit.co/f8bb97116566734dc49fef5aeceee690" method="POST" target="_blank">
+  <form class="mdc-container" action="https://formsubmit.co/midwestdentalconsulting@gmail.com" method="POST" target="_blank">
     <div class="mdc-section">
       <label>Name</label>
       <input class="mdc-input mdc-border mdc-hover-border-black" style="width:100%;" type="text" name="Name" required>
