--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="mdc-row-padding" >
     <div class="mdc-center mdc-padding-64"style="background-color: #f8f9fa;">
       <h3>Spend more time doing what you do best.</h3>
-      <p>We provide business support to increase revenue and reduce stress.
+      <p>We provide dental and patient billing services to help increase revenue and reduce stress.
         Let us clear the way so you can focus on the work that brings you joy and a healthy work/life balance for your dental practice.</p>
     </div>
 
